--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "english",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vasilich99.github.io/english",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -14,10 +15,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -b build -d build -u \"github-actions-bot <support+actions@github.com>\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   },
   "eslintConfig": {
     "extends": [
