--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "english",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://okovtkov.github.io/english",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
