--- a/package.json
+++ b/package.json
@@ -25,13 +25,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
     "gh-pages": "^3.2.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
