--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy": "gh-pages -b build -d build -u \"github-actions-bot <support+actions@github.com>\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "npx eslint .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
