feat: установлен линтер

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,20 @@
 {
   "extends": [
     "react-app",
-    "react-app/jest"
+    "react-app/jest",
+    "prettier"
   ],
+  "plugins": ["prettier"],
   "rules": {
-    "max-len": ["error", { "code": 120 }],
     "no-console": "warn",
     "prefer-const": "error",
+    "prettier/prettier": "error",
     "indent": ["warn", 2],
     "semi": ["warn", "always"],
     "promise/no-nesting": 0
-  }
+  },
+  "ignorePatterns": [
+    "node_modules/",
+    "build/"
+  ]
 }
