--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "npx eslint .",
+    "prettier:fix": "npx prettier --write .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
