--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "deploy": "gh-pages -b build -d build -u \"github-actions-bot <support+actions@github.com>\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "npx eslint .",
+    "prettier:fix": "npx prettier --write .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "gh-pages": "^3.2.3",
+    "prettier": "3.2.5"
   },
   "browserslist": {
     "production": [
