--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "gh-pages": "^3.2.3",
+    "jest": "^27.5.1",
     "prettier": "3.2.5"
   },
   "browserslist": {
