--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "firebase": "^9.6.10",
     "react": "^18.2.0",
@@ -23,15 +20,18 @@
     "build": "react-scripts build",
     "lint": "npx eslint .",
     "prettier:fix": "npx prettier --write .",
-    "test": "npx jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^6.4.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "gh-pages": "^3.2.3",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
     "prettier": "3.2.5"
   },
   "browserslist": {
