--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
-    "@testing-library/jest-dom": "^6.4.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "gh-pages": "^3.2.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.2.5"
   },
   "browserslist": {
