--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
           --user "olek <oleg@gmail.kek>"
       - name: Run main deploy
         if: env.BRANCH_NAME != 'main'
-        run: npx gh-pages -b build -d build -u \"github-actions-bot <support+actions@github.com>\"
+        run: npx gh-pages -b build -d build -u "olek <oleg@gmail.kek>"
       - name: Send comment to pull request
         if: github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v2
