--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "deploy": "gh-pages -b build -d build -u \"github-actions-bot <support+actions@github.com>\"",
     "dev": "npm run dev -w @english/application",
+    "build": "npm run build -w @english/application",
     "lint": "npx eslint .",
     "prettier:fix": "npx prettier --write ."
   },
