--- a/.github/workflows/pr_deploy.yml
+++ b/.github/workflows/pr_deploy.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run deploy
         # --branch - переходим на ветку build,
         # --remove - удаляем прошлую директорию с названием текущей ветки
-        # --dist - добавляем содержимое папки ./build в папку с именем ветки которую указываем с флагом --dest
+        # --dist - добавляем содержимое папки build в папку с именем ветки которую указываем с флагом --dest
         # --user - указываем кодера, из-за которого навернется прод
         run: |
           npx gh-pages \
