--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-  "semi": true,
-  "printWidth": 100,
+  "trailingComma": "es5",
   "tabWidth": 2,
-  "singleQuote": true
+  "printWidth": 100,
+  "semi": true,
+  "singleQuote": true,
+  "endOfLine": "lf"
 }
