--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-config-react-app": "^7.0.0",
     "gh-pages": "^3.2.3",
     "prettier": "3.2.5"
   },
